--- a/src/styles/card-list.scss
+++ b/src/styles/card-list.scss
@@ -1,11 +1,14 @@
+@import "_utils/breakpoints";
+
 .card-list {
   padding: 48px 0 64px;
 
   &__content {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(375px, 420px));
     column-gap: 24px;
     row-gap: 24px;
+    justify-content: center;
   }
 
   &__title {
@@ -15,5 +18,37 @@
     font-size: 24px;
     line-height: 28px;
     color: #000000;
+  }
+
+  @media (max-width: $bp-max-tablet) {
+    padding-left: 32px;
+    padding-right: 32px;
+
+    &__content {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+
+  @media (max-width: $bp-max-mobile-landscape) {
+    padding-left: 0;
+    padding-right: 0;
+
+    &__content {
+      grid-template-columns: 1fr;
+      row-gap: 0;
+    }
+
+    &__content-item {
+      padding: 24px 0;
+      border-bottom: 1px solid #e2e2e2;
+
+      &:first-child {
+        padding-top: 0;
+      }
+      &:last-child {
+        padding-bottom: 0;
+        border-bottom: 0;
+      }
+    }
   }
 }
