--- a/src/styles/hero-card.scss
+++ b/src/styles/hero-card.scss
@@ -1,12 +1,11 @@
 .hero-card {
-  background: #FFFFFF;
+  background: #ffffff;
   border-radius: 10px;
   padding: 24px;
 
   &__avatar {
-    width: 201px;
+    width: 100%;
     height: 158px;
-    flex-shrink: 0;
     border-radius: 10px;
     overflow: hidden;
   }
@@ -14,14 +13,14 @@
   &__avatar-image {
     width: 100%;
     height: 100%;
-    object-fit: scale-down;
+    object-fit: cover;
   }
 
   &__description {
     font-weight: 300;
     font-size: 16px;
     line-height: 19px;
-    color: #ACACAC;
+    color: #acacac;
   }
 
   &__details {
@@ -32,6 +31,8 @@
 
   &__games {
     margin-left: 16px;
+    width: 156px;
+    flex-shrink: 0;
   }
 
   &__media {
@@ -42,7 +43,7 @@
     font-weight: 500;
     font-size: 24px;
     line-height: 28px;
-    color: #2B2B2B;
+    color: #2b2b2b;
     margin-bottom: 8px;
   }
 
@@ -50,7 +51,7 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 28px;
-    color: #2B2B2B;
+    color: #2b2b2b;
     margin-bottom: 8px;
   }
 
@@ -71,6 +72,24 @@
     font-weight: 300;
     font-size: 16px;
     line-height: 19px;
-    color: #ACACAC;
+    color: #acacac;
+  }
+
+  @media (max-width: $bp-max-tablet) {
+    &__avatar {
+      width: 100%;
+    }
+    &__games {
+      display: none;
+    }
+  }
+
+  @media (max-width: $bp-max-mobile-landscape) {
+    padding: 0;
+
+    &__games {
+      display: block;
+      width: 110px;
+    }
   }
 }
