--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,9 +1,9 @@
-@import '_utils/breakpoints';
-@import '_utils/uads';
+@import "_utils/breakpoints";
+@import "_utils/uads";
 
 @mixin pageContainer() {
   width: 1312px;
-  max-width: calc(100% - 32px);
+  max-width: calc(100% - 48px);
   margin: 0 auto;
 }
 
@@ -40,7 +40,7 @@
 
   &__contact-icon {
     font-size: 16px;
-    color: #EB922F;
+    color: #eb922f;
     margin-right: 16px;
 
     svg {
@@ -57,7 +57,7 @@
   }
 
   &__content {
-    background: #EFF1F4;
+    background: #eff1f4;
     flex-grow: 1;
     padding: 40px 0;
   }
@@ -67,8 +67,8 @@
   }
 
   &__footer {
-    background: #2B2B2B;
-    color: #FFFFFF;
+    background: #2b2b2b;
+    color: #ffffff;
   }
 
   &__footer-container {
@@ -82,13 +82,13 @@
     align-items: center;
 
     &:first-child {
-      border-bottom: 1px solid #CECECE;
+      border-bottom: 1px solid #cecece;
     }
   }
 
   &__header {
     padding: 40px 0;
-    background: #FFFFFF;
+    background: #ffffff;
   }
 
   &__header-container {
@@ -140,16 +140,20 @@
       padding: 32px 0;
     }
 
+    &__content-container {
+      max-width: calc(100% - 140px);
+    }
   }
 
   @media (max-width: $bp-max-mobile-landscape) {
-    &__container {
-      max-width: calc(100% - 24px);
+    &__content {
+      background: #ffffff;
+      padding: 24px 0;
+      margin-bottom: 74px;
     }
 
-    &__content {
-      background: #FFFFFF;
-      padding: 24px 0;
+    &__content-container {
+      max-width: calc(100% - 48px);
     }
 
     &__footer {
@@ -172,9 +176,12 @@
 
     &__mobile-menu {
       display: block;
-      color: #ACACAC;
-      background: #FFFFFF;
+      color: #acacac;
+      background: #ffffff;
       box-shadow: 0px 0px 10px rgba(201, 200, 200, 0.5);
+      position: fixed;
+      bottom: 0;
+      width: 100%;
     }
   }
 }
