--- a/src/styles/promo-media.scss
+++ b/src/styles/promo-media.scss
@@ -1,12 +1,15 @@
+@import "_utils/breakpoints";
+
 .promo-media {
   border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(
-    rgba(0, 0, 0, 0.4), 
-    rgba(0, 0, 0, 0.4)
-  ), url("./assets/fortnite.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("./assets/fortnite.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50%;
   width: 100%;
   height: 347px;
 
@@ -15,9 +18,28 @@
     font-size: 50px;
     line-height: 59px;
     color: #fff;
+    padding: 48px;
+    text-align: center;
 
     b {
       font-weight: 500;
+    }
+  }
+
+  @media (max-width: $bp-max-tablet) {
+    border-radius: 6px;
+    height: 200px;
+
+    &__text {
+      font-size: 30px;
+      line-height: 35px;
+    }
+  }
+
+  @media (max-width: $bp-max-mobile-landscape) {
+    &__text {
+      font-size: 24px;
+      line-height: 28px;
     }
   }
 }
