--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,11 +1,16 @@
 @import "global";
 
+@import "boxed-sections";
 @import "card-list";
 @import "footer-menu";
 @import "game-list";
 @import "header-menu";
 @import "hero-card";
+@import "next-steps";
 @import "page";
+@import "profile-details";
 @import "promo-media";
+@import "purchase-note";
 @import "social-link-list";
+@import "tertiary-button";
 @import "toolbar-menu";
