add Empty Index page layout and styles

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,11 +6,13 @@
 @import "game-list";
 @import "header-menu";
 @import "hero-card";
+@import "message-box";
 @import "next-steps";
 @import "page";
 @import "profile-details";
 @import "promo-media";
 @import "purchase-note";
+@import "single-boxed-section";
 @import "social-link-list";
 @import "tertiary-button";
 @import "toolbar-menu";
