add Guest Home page layout and styles

--- a/src/styles/header-menu.scss
+++ b/src/styles/header-menu.scss
@@ -8,13 +8,14 @@
     $list-style-type: none,
     $margin-bottom: 0,
     $margin-left: 0,
-    $margin-right: 36px,
+    $margin-right: 0,
     $margin-top: 0,
     $padding-bottom: 0,
     $padding-left: 0,
     $padding-right: 0,
     $padding-top: 0
   );
+  align-items: center;
   
   &__link {
     @include uads-a(
@@ -45,9 +46,5 @@
     &--active {
       font-weight: 500;
     }
-  }
-
-  @media (max-width: $bp-max-tablet) {
-    margin-right: 0;
   }
 }
