--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @import "global";
 
+@import "auth-button-list";
 @import "boxed-sections";
 @import "card-list";
 @import "footer-menu";
@@ -12,7 +13,7 @@
 @import "profile-details";
 @import "promo-media";
 @import "purchase-note";
+@import "secondary-button";
 @import "single-boxed-section";
 @import "social-link-list";
-@import "tertiary-button";
 @import "toolbar-menu";
