--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -101,6 +101,7 @@
     flex-grow: 1;
     display: flex;
     justify-content: flex-end;
+    padding-right: 36px,
   }
 
   &__logo {
@@ -142,6 +143,10 @@
 
     &__content-container {
       max-width: calc(100% - 140px);
+    }
+
+    &__header-menu {
+      padding-right: 0;
     }
   }
 
