add Success Reset Password page layout and styles

--- a/src/styles/message-box.scss
+++ b/src/styles/message-box.scss
@@ -10,6 +10,19 @@
     line-height: 19px;
   }
 
+  &__icon {
+    font-size: 80px;
+    margin-bottom: 48px;
+    display: flex;
+    justify-content: center;
+  
+    svg {
+      width: 1em;
+      height: 1em;
+      display: flex;
+    }
+  }
+
   &__title {
     font-weight: 500;
     font-size: 24px;
