--- a/src/styles/single-boxed-section.scss
+++ b/src/styles/single-boxed-section.scss
@@ -1,30 +1,41 @@
 .single-boxed-section {
-  background-image: url("./assets/empty-index.svg");
-  min-height: 512px;
-  background-repeat: no-repeat;
-  background-position: right bottom;
-  background-size: 700px;
   padding: 64px 0;
+  display: flex;
 
   &__box {
     width: 33.33%;
+    flex-shrink: 0;
+  }
+
+  &__decor {
+    flex-grow: 1;
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 64px;
+    padding-left: 64px;
+  }
+
+  &__decor-image {
+    width: 100%;
   }
 
   @media (max-width: $bp-max-tablet) {
     padding-left: 32px;
     padding-right: 32px;
-    background-position: center bottom;
-    background-size: contain;
+    flex-direction: column;
 
     &__box {
       width: 75%;
       margin: 0 auto;
     }
+
+    &__decor {
+      padding-left: 0;
+    }
   }
 
   @media (max-width: $bp-max-mobile-landscape) {
-    padding: 48px 0 64px;
-    min-height: 360px;
+    padding: 32px 0 32px;
 
     &__box {
       width: 100%;
