--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,12 +4,15 @@
 @import "boxed-sections";
 @import "card-list";
 @import "footer-menu";
+@import "form-box";
+@import "form-field";
 @import "game-list";
 @import "header-menu";
 @import "hero-card";
 @import "message-box";
 @import "next-steps";
 @import "page";
+@import "primary-button";
 @import "profile-details";
 @import "promo-media";
 @import "purchase-note";
