--- a/src/styles/primary-button.scss
+++ b/src/styles/primary-button.scss
@@ -1,15 +1,17 @@
 @import "_utils/uads";
 
-.secondary-button {
+.primary-button {
   $button-views: (
     "solid": (
       "background-color": #EB922F,
       "border-color": #EB922F,
+      "border-color--disabled": #ACACAC,
       "text-color": #ffffff,
     ),
     "stroked": (
       "background-color": #ffffff,
       "border-color": #EB922F,
+      "border-color--disabled": #ACACAC,
       "text-color": #EB922F,
     )
   );
@@ -19,8 +21,8 @@
   $padding-bottom: 12px;
   $padding-left: 24px;
   $font-weight: 500;
-  $font-size: 12px;
-  $line-height: 14px;
+  $font-size: 16px;
+  $line-height: 19px;
   
   width: 100%;
 
@@ -75,7 +77,7 @@
           $box-sizing: border-box,
           $color: map-get($view-style, "text-color"),
           $color--active: map-get($view-style, "text-color"),
-          $color--disabled: GrayText,
+          $color--disabled: #ACACAC,
           $cursor: default,
           $display: $display,
           $font-family: inherit,
@@ -107,6 +109,11 @@
           $word-spacing: normal,
           $writing-mode: horizontal-tb
         );
+
+        &:disabled {
+          border-color: map-get($view-style, "border-color--disabled");
+          background: #ffffff;
+        }
       }
     }
   }
