add Success Contact page layout and styles

--- a/src/styles/message-box.scss
+++ b/src/styles/message-box.scss
@@ -4,6 +4,10 @@
   border-radius: 10px;
   text-align: center;
 
+  &__actions {
+    margin-top: 48px;
+  }
+
   &__content {
     font-weight: 300;
     font-size: 16px;
