--- a/src/styles/form-box.scss
+++ b/src/styles/form-box.scss
@@ -11,10 +11,18 @@
     margin-bottom: 48px;
   }
 
+  &__secondary-actions {
+    margin-bottom: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
   &__title {
     font-weight: 300;
     font-size: 24px;
     line-height: 28px;
+    margin-bottom: 48px;
   }
 
   @media (max-width: $bp-max-mobile-landscape) {
