--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,4 +19,5 @@
 @import "secondary-button";
 @import "single-boxed-section";
 @import "social-link-list";
+@import "toggle-switcher";
 @import "toolbar-menu";
