add Registration page layout and styles

--- a/src/styles/form-box.scss
+++ b/src/styles/form-box.scss
@@ -3,6 +3,10 @@
   background: #fff;
   border-radius: 10px;
 
+  &__confirmation {
+    margin-bottom: 16px;
+  }
+
   &__fields {
     margin-bottom: 40px;
   }
