--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,7 @@
 @import "auth-button-list";
 @import "boxed-sections";
 @import "card-list";
+@import "checkbox-field";
 @import "footer-menu";
 @import "form-box";
 @import "form-field";
