--- a/src/styles/primary-button.scss
+++ b/src/styles/primary-button.scss
@@ -9,7 +9,7 @@
       "text-color": #ffffff,
     ),
     "stroked": (
-      "background-color": #ffffff,
+      "background-color": transparent,
       "border-color": #EB922F,
       "border-color--disabled": #ACACAC,
       "text-color": #EB922F,
