--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,7 @@
 @import "game-list";
 @import "header-menu";
 @import "hero-card";
+@import "logout-button";
 @import "message-box";
 @import "next-steps";
 @import "page";
