--- a/src/styles/secondary-button.scss
+++ b/src/styles/secondary-button.scss
@@ -8,7 +8,7 @@
       "text-color": #ffffff,
     ),
     "stroked": (
-      "background-color": #ffffff,
+      "background-color": transparent,
       "border-color": #EB922F,
       "text-color": #EB922F,
     )
@@ -21,8 +21,6 @@
   $font-weight: 500;
   $font-size: 12px;
   $line-height: 14px;
-  
-  width: 100%;
 
   @each $view-name, $view-style in $button-views {
     &--#{$view-name} {
