--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,6 +19,7 @@
 @import "promo-media";
 @import "purchase-note";
 @import "secondary-button";
+@import "session-list";
 @import "single-boxed-section";
 @import "social-link-list";
 @import "toggle-switcher";
