--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,12 +4,14 @@
 @import "boxed-sections";
 @import "card-list";
 @import "checkbox-field";
+@import "followers-list";
 @import "footer-menu";
 @import "form-box";
 @import "form-field";
 @import "game-list";
 @import "header-menu";
 @import "hero-card";
+@import "hero-profile";
 @import "logout-button";
 @import "message-box";
 @import "next-steps";
@@ -17,6 +19,7 @@
 @import "primary-button";
 @import "profile-details";
 @import "promo-media";
+@import "purchase-box";
 @import "purchase-note";
 @import "secondary-button";
 @import "session-list";
