--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import "global";
 
 @import "auth-button-list";
+@import "book-session-form";
 @import "boxed-sections";
 @import "card-list";
 @import "checkbox-field";
@@ -14,6 +15,7 @@
 @import "hero-profile";
 @import "logout-button";
 @import "message-box";
+@import "modal";
 @import "next-steps";
 @import "page";
 @import "primary-button";
