--- a/src/styles/profile-details.scss
+++ b/src/styles/profile-details.scss
@@ -1,5 +1,5 @@
 /*
-  Note: color modifier is required on component's tag element:
+  Note: color modifier is required on component's "tag" element:
     - profile-details__tag--green
     - profile-details__tag--red
     - profile-details__tag--transparent
