--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -156,6 +156,7 @@
       background: #ffffff;
       padding: 24px 0;
       margin-bottom: 74px;
+      margin-top: 84px;
     }
 
     &__content-container {
@@ -169,7 +170,11 @@
     &__header {
       padding: 24px 0;
       box-shadow: 0px 0px 10px rgba(201, 200, 200, 0.5);
-      position: relative; // has to be about .content on z-scale to make shadow visible
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 1;
     }
 
     &__header-menu {
