--- a/src/styles/book-session-form.scss
+++ b/src/styles/book-session-form.scss
@@ -14,6 +14,14 @@
     }
   }
 
+  &__estimate-note {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    color: #EB922F;
+    margin-top: 8px;
+  }
+
   &__fields {
     padding: 0 24px;
   }
