--- a/src/styles/footer-menu.scss
+++ b/src/styles/footer-menu.scss
@@ -7,7 +7,7 @@
     $list-style-position: outside,
     $list-style-type: none,
     $margin-bottom: 0,
-    $margin-left: 0,
+    $margin-left: -16px,
     $margin-right: 0,
     $margin-top: 0,
     $padding-bottom: 0,
@@ -40,6 +40,7 @@
     font-weight: 300;
     font-size: 18px;
     line-height: 21px;
+    display: block;
     padding: 16px;
   
     &--active {
