change field border color in focused state

--- a/src/styles/form-field.scss
+++ b/src/styles/form-field.scss
@@ -20,7 +20,7 @@
 .form-field {
   $background-color: #ffffff;
   $border-color: #E2E2E2;
-  $border-color--focused: #EB922F;
+  $border-color--focused: #E2E2E2;
   $font-size: 16px;
   $font-weight: 300;
   $icon-color: #ACACAC;
