--- a/src/styles/profile-details.scss
+++ b/src/styles/profile-details.scss
@@ -17,6 +17,7 @@
 
   &__avatar {
     width: 165px;
+    height: 420px; // equals to purchase-box's height on Hero Profile page
     border-radius: 10px;
     overflow: hidden;
     flex-shrink: 0;
