--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,6 +13,9 @@
 @import "header-menu";
 @import "hero-card";
 @import "hero-profile";
+@import "loading-hero-card";
+@import "loading-hero-profile";
+@import "loading-purchase-note";
 @import "logout-button";
 @import "message-box";
 @import "modal";
