remove dotted outline from all links

--- a/src/styles/secondary-button.scss
+++ b/src/styles/secondary-button.scss
@@ -41,13 +41,13 @@
           $color--visited: map-get($view-style, "text-color"),
           $cursor: pointer,
           $outline-color--active-link: map-get($view-style, "border-color"),
-          $outline-style--active-link: dotted,
+          $outline-style--active-link: none,
           $outline-width--active-link: 1px,
           $outline-color--active-visited: map-get($view-style, "border-color"),
-          $outline-style--active-visited: dotted,
+          $outline-style--active-visited: none,
           $outline-width--active-visited: 1px,
           $outline-color--focus: map-get($view-style, "border-color"),
-          $outline-style--focus: dotted,
+          $outline-style--focus: none,
           $outline-width--focus: 1px,
           $text-decoration: none,
           $user-focus: normal,
