--- a/src/styles/social-link-list.scss
+++ b/src/styles/social-link-list.scss
@@ -33,13 +33,13 @@
       $color--visited: #ffffff,
       $cursor: pointer,
       $outline-color--active-link: currentColor,
-      $outline-style--active-link: dotted,
+      $outline-style--active-link: none,
       $outline-width--active-link: 1px,
       $outline-color--active-visited: currentColor,
-      $outline-style--active-visited: dotted,
+      $outline-style--active-visited: none,
       $outline-width--active-visited: 1px,
       $outline-color--focus: currentColor,
-      $outline-style--focus: dotted,
+      $outline-style--focus: none,
       $outline-width--focus: 1px,
       $text-decoration: none,
       $user-focus: normal,
