--- a/src/styles/toolbar-menu.scss
+++ b/src/styles/toolbar-menu.scss
@@ -45,13 +45,13 @@
       $color--visited: #ACACAC,
       $cursor: pointer,
       $outline-color--active-link: currentColor,
-      $outline-style--active-link: dotted,
+      $outline-style--active-link: none,
       $outline-width--active-link: 1px,
       $outline-color--active-visited: currentColor,
-      $outline-style--active-visited: dotted,
+      $outline-style--active-visited: none,
       $outline-width--active-visited: 1px,
       $outline-color--focus: currentColor,
-      $outline-style--focus: dotted,
+      $outline-style--focus: none,
       $outline-width--focus: 1px,
       $text-decoration: none,
       $user-focus: normal,
@@ -71,13 +71,13 @@
         $color--visited: #EB922F,
         $cursor: pointer,
         $outline-color--active-link: currentColor,
-        $outline-style--active-link: dotted,
+        $outline-style--active-link: none,
         $outline-width--active-link: 1px,
         $outline-color--active-visited: currentColor,
-        $outline-style--active-visited: dotted,
+        $outline-style--active-visited: none,
         $outline-width--active-visited: 1px,
         $outline-color--focus: currentColor,
-        $outline-style--focus: dotted,
+        $outline-style--focus: none,
         $outline-width--focus: 1px,
         $text-decoration: none,
         $user-focus: normal,
