add temp page for all images sizes

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,6 +13,7 @@
 @import "header-menu";
 @import "hero-card";
 @import "hero-profile";
+@import "images";
 @import "loading-hero-card";
 @import "loading-hero-profile";
 @import "loading-purchase-note";
