--- a/src/styles/promo-media.scss
+++ b/src/styles/promo-media.scss
@@ -5,8 +5,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url("./assets/fortnite.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("./assets/promo-tablet-desktop.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50%;
@@ -33,6 +33,9 @@
   }
 
   @media (max-width: $bp-max-mobile-landscape) {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+      url("./assets/promo-mobile.jpg");
+
     &__text {
       font-size: 24px;
       line-height: 28px;
