--- a/src/styles/toolbar-menu.scss
+++ b/src/styles/toolbar-menu.scss
@@ -18,6 +18,8 @@
   justify-content: space-between;
   max-width: 375px;
   margin: 0 auto;
+  background: #ffffff;
+  box-shadow: 0px 0px 10px rgba(201, 200, 200, 0.5);
 
   &__icon {
     font-size: 24px;
