replace Book button in toolbar with Purchase CTA component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -26,6 +26,7 @@
 @import "profile-details";
 @import "promo-media";
 @import "purchase-box";
+@import "purchase-cta";
 @import "purchase-note";
 @import "secondary-button";
 @import "session-list";
