--- a/src/styles/boxed-sections.scss
+++ b/src/styles/boxed-sections.scss
@@ -1,7 +1,7 @@
 @import "_utils/breakpoints";
 
 .boxed-sections {
-  padding: 48px 0 64px;
+  padding: 0;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   column-gap: 24px;
