--- a/src/styles/profile-details.scss
+++ b/src/styles/profile-details.scss
@@ -50,8 +50,8 @@
 
   &__name {
     font-weight: 500;
-    font-size: 36px;
-    line-height: 42px;
+    font-size: 24px;
+    line-height: 28px;
     color: #2B2B2B;
   }
 
@@ -106,7 +106,8 @@
     flex-direction: column;
 
     &__actions {
-      margin-top: 8px;
+      margin-top: 24px;
+      margin-bottom: 24px;
     }
 
     &__avatar {
@@ -116,7 +117,7 @@
 
     &__content {
       margin-left: 0;
-      margin-top: 40px;
+      margin-top: 24px;
     }
 
     &__header {
