--- a/src/styles/promo-media.scss
+++ b/src/styles/promo-media.scss
@@ -12,6 +12,7 @@
   background-position: 50%;
   width: 100%;
   height: 347px;
+  margin-top: 24px;
 
   &__text {
     font-weight: 300;
@@ -35,6 +36,7 @@
   @media (max-width: $bp-max-mobile-landscape) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
       url("./assets/promo-mobile.jpg");
+      margin-top: 0px;
 
     &__text {
       font-size: 24px;
