change spacing around promo-media and card-list components

--- a/src/styles/card-list.scss
+++ b/src/styles/card-list.scss
@@ -1,7 +1,7 @@
 @import "_utils/breakpoints";
 
 .card-list {
-  padding: 48px 0 64px;
+  padding-bottom: 64px;
 
   &__content {
     display: grid;
