--- a/src/styles/promo-media.scss
+++ b/src/styles/promo-media.scss
@@ -12,7 +12,7 @@
   background-position: 50%;
   width: 100%;
   height: 347px;
-  margin-top: 24px;
+  margin-bottom: 48px;
 
   &__text {
     font-weight: 300;
