--- a/src/styles/game-list.scss
+++ b/src/styles/game-list.scss
@@ -31,6 +31,19 @@
     overflow: hidden;
     background: rgba(0, 0, 0, 0.4);
 
+    &:hover {
+      &::after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(255,255,255,0.25);
+      }
+    }
+
     .game-list--big & {
       border-radius: 10px;
     }
