--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,7 @@
 @import "boxed-sections";
 @import "card-list";
 @import "checkbox-field";
+@import "compact-profile-details";
 @import "followers-list";
 @import "footer-menu";
 @import "form-box";
@@ -13,6 +14,7 @@
 @import "header-menu";
 @import "hero-card";
 @import "hero-profile";
+@import "hero-scheduling";
 @import "images";
 @import "loading-hero-card";
 @import "loading-hero-profile";
@@ -22,15 +24,18 @@
 @import "modal";
 @import "next-steps";
 @import "page";
+@import "playhero-vcalendar";
 @import "primary-button";
 @import "profile-details";
 @import "promo-media";
 @import "purchase-box";
 @import "purchase-cta";
 @import "purchase-note";
+@import "scheduling-steps";
 @import "secondary-button";
 @import "session-list";
 @import "single-boxed-section";
 @import "social-link-list";
+@import "time-slot-list";
 @import "toggle-switcher";
 @import "toolbar-menu";
