--- a/src/styles/profile-details.scss
+++ b/src/styles/profile-details.scss
@@ -59,6 +59,10 @@
     margin-right: 12px;
     margin-top: 8px;
 
+    &:last-child {
+      margin-right: 0;
+    }
+
     &--green {
       padding: 4px 8px;
       font-weight: 500;
