--- a/src/styles/promo-media.scss
+++ b/src/styles/promo-media.scss
@@ -5,14 +5,21 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url("./assets/promo-tablet-desktop.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50%;
   width: 100%;
   height: 347px;
   margin-bottom: 48px;
+
+  &--fortnite {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+      url("./assets/promo-tablet-desktop.jpg");
+  }
+  &--gamers {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+      url("./assets/promo-gamers.jpg");
+  }
 
   &__text {
     font-weight: 300;
@@ -34,9 +41,12 @@
   }
 
   @media (max-width: $bp-max-mobile-landscape) {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-      url("./assets/promo-mobile.jpg");
-      margin-top: 0px;
+    margin-top: 0px;
+      
+    &--fortnite {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+        url("./assets/promo-mobile.jpg");
+    }
 
     &__text {
       font-size: 24px;
