add Scheduling Platform Required layout and styles

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -33,6 +33,7 @@
 @import "purchase-note";
 @import "scheduling-steps";
 @import "secondary-button";
+@import "selected-game";
 @import "session-list";
 @import "single-boxed-section";
 @import "social-link-list";
