--- a/src/styles/primary-button.scss
+++ b/src/styles/primary-button.scss
@@ -76,8 +76,8 @@
           $background-color: map-get($view-style, "background-color"),
           $border-color: map-get($view-style, "border-color"),
           $border-style: solid,
-          $border-style--active: inset,
-          $border-style--active-disabled: inset,
+          $border-style--active: solid,
+          $border-style--active-disabled: solid,
           $border-width: 1px,
           $box-align: center,
           $box-sizing: border-box,
@@ -98,7 +98,7 @@
           $margin-bottom: 0,
           $margin-top: 0,
           $outline-color--focus: map-get($view-style, "border-color"),
-          $outline-style--focus: auto,
+          $outline-style--focus: none,
           $outline-width--focus: 1px,
           $outline-offset--focus: 0,
           $padding-top: $padding-top,
