add Scheduling Enter ID layout and styles

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,7 @@
 @import "footer-menu";
 @import "form-box";
 @import "form-field";
+@import "form-field-hint";
 @import "game-list";
 @import "header-menu";
 @import "hero-card";
