--- a/src/styles/selected-game.scss
+++ b/src/styles/selected-game.scss
@@ -32,7 +32,19 @@
         width: 100%;
         overflow: hidden;
         background: rgba(0, 0, 0, 0.4);
-        box-shadow: 0px 0px 0px 4px #1EA26B;
+
+        &::before {
+            content: "";
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 5px solid #1EA26B;
+            border-radius: inherit;
+            box-sizing: border-box;
+        }
     }
 
     &__game-background {
