--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -34,6 +34,7 @@
 @import "purchase-note";
 @import "scheduling-steps";
 @import "secondary-button";
+@import "select-field";
 @import "selected-game";
 @import "session-list";
 @import "single-boxed-section";
