--- a/src/styles/time-slot-list.scss
+++ b/src/styles/time-slot-list.scss
@@ -2,15 +2,61 @@
     display: flex;
     flex-direction: column;
 
+    &__additional {
+        margin: 16px 0 24px;
+    }
 
     &__item {
-        border: 1px solid #ACACAC;
+        @include uads-button(
+            $align-items: center,
+            $appearance: none,
+            $background-color: transparent,
+            $border-color: #EB922F,
+            $border-style: solid,
+            $border-style--active: solid,
+            $border-style--active-disabled: solid,
+            $border-width: 1px,
+            $box-align: center,
+            $box-sizing: border-box,
+            $color: #EB922F,
+            $color--active: #EB922F,
+            $color--disabled: GrayText,
+            $cursor: pointer,
+            $display: flex,
+            $font-family: inherit,
+            $font-size: 16px,
+            $font-style: normal,
+            $font-variant: normal,
+            $font-weight: 500,
+            $letter-spacing: normal,
+            $line-height: 19px,
+            $margin-left: 0,
+            $margin-right: 0,
+            $margin-bottom: 6px,
+            $margin-top: 6px,
+            $outline-color--focus: #1f5ccf,
+            $outline-style--focus: none,
+            $outline-width--focus: 3px,
+            $outline-offset--focus: 0,
+            $padding-top: 0,
+            $padding-right: 0,
+            $padding-bottom: 0,
+            $padding-left: 0,
+            $text-align: center,
+            $text-indent: 0,
+            $text-rendering: auto,
+            $text-shadow: none,
+            $text-transform: none,
+            $user-select: element,
+            $white-space: normal,
+            $word-spacing: normal,
+            $writing-mode: horizontal-tb
+        );
+
         border-radius: 10px;
-        display: flex;
         align-items: center;
         justify-content: center;
         height: 43px;
-        margin: 6px 0;
         width: 100%;
 
         &:first-child {
@@ -21,6 +67,8 @@
         }
 
         &--placeholder {
+            border-color: #ACACAC;
+
             &::before {
                 content: "";
                 display: block;
@@ -30,5 +78,9 @@
                 border-radius: 4px;
             }
         }
+    }
+
+    &__timezone {
+        margin-bottom: 16px;
     }
 }
