add User Account Sessions Pending layout and styles

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -38,6 +38,7 @@
 @import "select-field";
 @import "selected-game";
 @import "session-list";
+@import "session-message";
 @import "single-boxed-section";
 @import "social-link-list";
 @import "time-slot-list";
